# python-dhl-api

./: .gitignore  CHANGELOG.md  Pipfile  README.md  _config_template.py  pyproject.toml  setup.cfg
python_dhl/: dhl.py  service.py
python_dhl/resources/: helper.py  response.py  shipment.py
src/python_dhl/: dhl.py
src/python_dhl/resources/: address.py  helper.py  response.py  shipment.py
tests/: test_validate.py
