[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dhl-api"
version = "2.4"
description = "A Python module to integrate with DHL courier"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Innove", email="info@innove.it" },
]
license = { text="MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests",
]