[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dhl-api"
version = "3.0.0"
description = "A Python module to integrate with DHL courier"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name="Innove", email="info@innove.it" },
]
license = { text="MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests",
  "urllib3>=2.6.2",
]
