[metadata]
name = python-dhl-api
version = 2.4
author = Innove
author_email = info@innove.it
description = A Python module to integrate with DHL courier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/innoveit/python-dhl-api
project_urls =
    Bug Tracker = https://github.com/innoveit/python-dhl-api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    python_dhl
    python_dhl.resources
install_requires =
    requests
python_requires = >=3.9